--- a/solaris.html
+++ b/solaris.html
@@ -16,27 +16,12 @@
 				width: 100%;
 				height: 100%;
 				overflow: hidden;
-				background: linear-gradient(#5DBDE5, #E2F6FF);
-				flex: 4;
+				background: linear-gradient(#5DBDE5, #86DAFD);
 			}
 		</style>
-		
-		<link rel="stylesheet" href="./css/inspector.css">
 	</head>
 	<body>
-		<main>
-		</main>
-		
-		<aside id="inspector" class="inspector">
-			<a href="#" class="close">◀</a>
-			<a href="#inspector" class="open">▶</a>
-			
-			<div class="content">
-				<div class="breadcrumbContainer"></div>
-				<div class="object3DListContainer"></div>
-				<div class="propertiesContainer"></div>
-			</div>
-		</aside>
+		<main></main>
 		
 		<script src="three.min.js"></script>
 		<script src="solaris-bundle.js"></script>
