--- a/solaris.html
+++ b/solaris.html
@@ -23,7 +23,8 @@
 	<body>
 		<main></main>
 		
-		<script src="three.min.js"></script>
+		<script src="three.js/build/three.js"></script>
+		<script src="dat.gui.min.js"></script>
 		<script src="solaris-bundle.js"></script>
 	</body>
 </html>
