Mise à jour du chemin vers les fichiers JS

--- a/solaris.html
+++ b/solaris.html
@@ -23,8 +23,8 @@
 	<body>
 		<main></main>
 		
-		<script src="three.js/build/three.js"></script>
-		<script src="dat.gui.min.js"></script>
-		<script src="solaris-bundle.js"></script>
+		<script src="js/three.js/build/three.js"></script>
+		<script src="js/dat.gui.min.js"></script>
+		<script src="js/solaris-bundle.js"></script>
 	</body>
 </html>
