--- a/static/solaris.html
+++ b/static/solaris.html
@@ -18,10 +18,35 @@
 				overflow: hidden;
 				background: linear-gradient(#5DBDE5, #86DAFD);
 			}
+			
+			main canvas, main .ui {
+				position: absolute;
+				width: 100%;
+				height: 100%;
+			}
+			
+			main .ui {
+				z-index: 10;
+			}
+			
+			main canvas {
+				z-index: 20;
+			}
+
+			.ui .inventory {
+				position: absolute;
+				bottom: 0;
+				height: 30vw;
+				width: 90vw;
+				background-color: hsla(120, 100%, 50%, 0.8);
+			}
 		</style>
 	</head>
 	<body>
-		<main></main>
+		<main>
+			
+			<div id="ui" class="ui"></div>
+		</main>
 		
 		<script src="js/three.js"></script>
 		<script src="js/dat.gui.min.js"></script>
