Simplification du système de build (solution temporaire)

--- a/public/solaris.html
+++ b/public/solaris.html
@@ -50,6 +50,6 @@
 		
 		<script src="js/three.js"></script>
 		<script src="js/dat.gui.min.js"></script>
-		<script src="js/solaris-bundle.js"></script>
+		<script src="js/build/solaris-bundle.js"></script>
 	</body>
 </html>
