--- a/public/solaris.html
+++ b/public/solaris.html
@@ -4,11 +4,18 @@
 		<meta charset="UTF-8">
 		<title>Solaris</title>
 		<style>
+			@font-face {
+				font-family: "Curse Casual";
+				src: url("font/curse-casual.ttf");
+			}
+			
 			html, body {
 				background-color: black;
 				margin: 0;
 				padding: 0;
 				overflow: hidden;
+				
+				font-family: "Curse Casual", sans-serif;
 			}
 			
 			main {
@@ -33,12 +40,57 @@
 				z-index: 10;
 			}
 
-			.ui .inventory {
+			main .ui .inventory {
 				position: absolute;
 				bottom: 0;
-				height: 30vw;
-				width: 90vw;
-				background-color: hsla(120, 100%, 50%, 0.8);
+				left: 0;
+				right: 0;
+				height: 30vh;
+				background-color: beige;
+				transition: 200ms ease-out;
+			}
+
+			main .ui .inventory:not(.open) {
+				bottom: -30vh;
+			}
+			
+			main .ui .inventory h1 {
+				margin: 0;
+			    padding: 1rem;
+			    background-color: #494949;
+			    color: beige;
+			    font-weight: normal;
+			}
+			
+			main .ui .inventory .items {
+				display: flex;
+				/* align-content: space-between; */
+				/* justify-content: space-between; */
+				flex-direction: row;
+				flex-wrap: wrap;
+				padding: 0.5rem;
+			}
+
+			main .ui .inventory .items .space {
+				display: block;
+				height: 3rem;
+				width: 3rem;
+				margin: 0.5rem;
+				background-color: #f7f7e0;
+			    border: 0.15rem dashed #CFCABC;
+				border-radius: 50%;
+			}
+
+			main .ui .inventory .items .space:not(:empty) {
+			    border: 0.15rem solid #494949;
+			}
+
+			main .ui .item {
+				display: block;
+				height: 100%;
+				width: 100%;
+				background-color: #494949;
+				border-radius: 50%;
 			}
 
 			.dg.ac {
@@ -49,6 +101,11 @@
 	<body>
 		<main>
 			<div id="ui" class="ui">
+				<section class="inventory open">
+					<h1>Inventory</h1>
+					<div class="items">
+					</div>
+				</section>
 			</div>
 		</main>
 		
