--- a/public/solaris.html
+++ b/public/solaris.html
@@ -91,6 +91,11 @@
 				width: 100%;
 				background-color: #494949;
 				border-radius: 50%;
+			    overflow: hidden;
+			    color: beige;
+			    text-align: center;
+			    display: flex;
+    			align-items: center;
 			}
 
 			.dg.ac {
