Remplacement de toutes les références à Solaris par Solaria

--- a/public/solaria.html
+++ b/public/solaria.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>Solaris</title>
+		<title>Solaria</title>
 		<style>
 			@font-face {
 				font-family: "Curse Casual";
@@ -116,6 +116,6 @@
 		
 		<script src="js/three.js"></script>
 		<script src="js/dat.gui.min.js"></script>
-		<script src="js/build/solaris-bundle.js"></script>
+		<script src="js/build/solaria-bundle.js"></script>
 	</body>
 </html>
