Centrage du texte dans les items

--- a/public/solaria.html
+++ b/public/solaria.html
@@ -96,6 +96,7 @@
 			    text-align: center;
 			    display: flex;
     			align-items: center;
+			    justify-content: center;
 			}
 
 			.dg.ac {
